<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_logo"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/lblold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/old_password"
            android:textColor="#fff"
            android:typeface="serif" />

        <TextView
            android:id="@+id/lblnew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblold"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/new_password"
            android:textColor="#fff"
            android:typeface="serif" />

        <TextView
            android:id="@+id/lblrenew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/lblnew"
            android:layout_below="@id/lblnew"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/retype_new_password"
            android:textColor="#fff"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblold"
            android:layout_below="@id/header"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/lblnew"
            android:background="@drawable/login_edittext_bg"
            android:gravity="fill_horizontal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#aaa"
            android:typeface="serif" >
        </EditText>

        <EditText
            android:id="@+id/txtNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblnew"
            android:layout_below="@id/txtOld"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/lblnew"
            android:background="@drawable/login_edittext_bg"
            android:gravity="fill_horizontal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#aaa"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtReNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblrenew"
            android:layout_below="@id/txtNew"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/lblrenew"
            android:background="@drawable/login_edittext_bg"
            android:gravity="fill_horizontal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#aaa"
            android:typeface="serif" />

        <RelativeLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/lblrenew"
            android:layout_marginTop="30dp" >

            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/btn_cancel"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut"
                android:layout_marginLeft="10dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/btn_ok"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>