<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <!-- Bottom Button -->

    <RelativeLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true" >

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strut"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/btn_cancel"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strut"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/btn_ok"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn"
        android:layout_marginBottom="10dp"
        android:cacheColorHint="#00000000"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btnContactColor"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="@string/menu_1"
                android:textColor="#fff"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <LinearLayout
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#fff"
                android:divider="#fff"
                android:dividerHeight="0dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btnContactColor"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="@string/key_contact_title"
                android:textColor="#fff"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <LinearLayout
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#fff"
                android:divider="#fff"
                android:dividerHeight="0dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btnContactColor"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="@string/key_contact_3_title"
                android:textColor="#fff"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <LinearLayout
                android:id="@+id/content3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:divider="#fff"
                android:dividerHeight="0dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>