<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile" >
        </ImageView>

        <TextView
            android:id="@+id/btnChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/login_button_bg"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/btn_change_password"
            android:textColor="#fff"
            android:typeface="serif" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/control"
        android:background="#aaa"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:singleLine="false"
        android:text="@string/key_info_title"
        android:textColor="#fff"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <!-- Bottom Button -->

    <RelativeLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp" >

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnInfo1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/strut"
            android:layout_marginRight="5dp"
            android:background="#027fff"
            android:padding="5dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/btnInfo2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/strut"
            android:layout_marginLeft="5dp"
            android:background="#db0a00"
            android:padding="5dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </RelativeLayout>

    <!-- Content -->

    <ListView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn"
        android:layout_below="@id/title"
        android:background="#fff"
        android:typeface="serif" />

</RelativeLayout>