<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="#fff"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/studentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentName"
            android:gravity="left"
            android:textColor="#fbfe02"
            android:textStyle="bold"
            android:typeface="serif" />

        <Switch
            android:id="@+id/mark4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/studentName"
            android:checked="false"
            android:gravity="center"
            android:text="@string/mark4"
            android:textColor="#fff"
            android:textSize="10sp"
            android:typeface="serif" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#731bcd"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/register_curriculum_result_current"
            android:textColor="#fff"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/markAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="Điểm Trung bình: 8.47"
            android:textColor="#fff"
            android:textSize="12sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/rlsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/markAvg"
            android:text="Điểm rèn luyện: 90"
            android:textColor="#fff"
            android:textSize="12sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/XLHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/markAvg"
            android:text="Xếp loại: Giỏi"
            android:textColor="#fff"
            android:textSize="12sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/XLRLSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/XLHL"
            android:layout_below="@id/XLHL"
            android:layout_toRightOf="@id/markAvg"
            android:text="Xếp loại: XS"
            android:textColor="#fff"
            android:textSize="12sp"
            android:typeface="serif" />
    </RelativeLayout>

    <ListView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:typeface="serif" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5b5b5b"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:text="@string/help_title"
        android:textColor="#fff"
        android:textStyle="bold"
        android:typeface="serif" />

    <ListView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:typeface="serif" />

</LinearLayout>